{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 36,
  "lineage": "55084fb9-663e-4b8c-38cb-46c04bf01286",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Utchay1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:853557926819:instance/i-014b2854c621ded68",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014b2854c621ded68",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UtchayKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-065df0045f001183d",
            "private_dns": "ip-10-0-1-58.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-35-176-69-39.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.69.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041c17e79f10318b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-020bcd677e14045ba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acb744ed285a9b15",
            "tags": {
              "Name": "Utchay-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Utchay-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-020bcd677e14045ba"
            ]
          },
          "dependencies": [
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Utchay2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:853557926819:instance/i-005408862f2e06230",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005408862f2e06230",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UtchayKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d523a6a0ccee2ab6",
            "private_dns": "ip-10-0-2-77.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.77",
            "public_dns": "ec2-35-178-17-161.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.17.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efaada0274696f19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-020bcd677e14045ba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6cd36cefc9345f5",
            "tags": {
              "Name": "Utchay-2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Utchay-2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-020bcd677e14045ba"
            ]
          },
          "dependencies": [
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Utchay3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:853557926819:instance/i-06a58036c3fc77d55",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a58036c3fc77d55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UtchayKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c84967d97b9d27a",
            "private_dns": "ip-10-0-1-185.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.185",
            "public_dns": "ec2-3-9-173-140.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.173.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e108767dca0974fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-020bcd677e14045ba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acb744ed285a9b15",
            "tags": {
              "Name": "utchay-3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "utchay-3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-020bcd677e14045ba"
            ]
          },
          "dependencies": [
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Utchay-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:853557926819:internet-gateway/igw-01c16a2d5ae2446fc",
            "id": "igw-01c16a2d5ae2446fc",
            "owner_id": "853557926819",
            "tags": {
              "Name": "Utchay-internet-gateway"
            },
            "tags_all": {
              "Name": "Utchay-internet-gateway"
            },
            "vpc_id": "vpc-006501caf4638b000"
          },
          "dependencies": [
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Utchay-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:loadbalancer/app/Utchay-load-balancer/e5be944274c95f5b",
            "arn_suffix": "app/Utchay-load-balancer/e5be944274c95f5b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Utchay-load-balancer-1997765455.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:loadbalancer/app/Utchay-load-balancer/e5be944274c95f5b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Utchay-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-069b94864f086b06d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0acb744ed285a9b15"
              },
              {
                "subnet_id": "subnet-0c6cd36cefc9345f5"
              }
            ],
            "subnets": [
              "subnet-0acb744ed285a9b15",
              "subnet-0c6cd36cefc9345f5"
            ],
            "vpc_id": "vpc-006501caf4638b000",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_instance.Utchay1",
            "aws_instance.Utchay2",
            "aws_instance.Utchay3",
            "aws_security_group.Utchay-load_balancer_sg",
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet1",
            "aws_subnet.Utchay-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Utchay-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:listener/app/Utchay-load-balancer/e5be944274c95f5b/35baf36a9fd02c97",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:listener/app/Utchay-load-balancer/e5be944274c95f5b/35baf36a9fd02c97",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:loadbalancer/app/Utchay-load-balancer/e5be944274c95f5b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Utchay1",
            "aws_instance.Utchay2",
            "aws_instance.Utchay3",
            "aws_lb.Utchay-load-balancer",
            "aws_lb_target_group.Utchay-target-group",
            "aws_security_group.Utchay-load_balancer_sg",
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet1",
            "aws_subnet.Utchay-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "Utchay-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:listener-rule/app/Utchay-load-balancer/e5be944274c95f5b/35baf36a9fd02c97/57ae84877cb968c8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:listener-rule/app/Utchay-load-balancer/e5be944274c95f5b/35baf36a9fd02c97/57ae84877cb968c8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:listener/app/Utchay-load-balancer/e5be944274c95f5b/35baf36a9fd02c97",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Utchay1",
            "aws_instance.Utchay2",
            "aws_instance.Utchay3",
            "aws_lb.Utchay-load-balancer",
            "aws_lb_listener.Utchay-listener",
            "aws_lb_target_group.Utchay-target-group",
            "aws_security_group.Utchay-load_balancer_sg",
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet1",
            "aws_subnet.Utchay-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Utchay-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74",
            "arn_suffix": "targetgroup/Utchay-target-group/8f59f63b86725e74",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Utchay-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-006501caf4638b000"
          },
          "dependencies": [
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Utchay-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74-20230201062512386600000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74",
            "target_id": "i-014b2854c621ded68"
          },
          "dependencies": [
            "aws_instance.Utchay1",
            "aws_lb_target_group.Utchay-target-group",
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Utchay-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74-20230201062501311900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74",
            "target_id": "i-005408862f2e06230"
          },
          "dependencies": [
            "aws_instance.Utchay2",
            "aws_lb_target_group.Utchay-target-group",
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Utchay-target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74-20230201062501311000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:853557926819:targetgroup/Utchay-target-group/8f59f63b86725e74",
            "target_id": "i-06a58036c3fc77d55"
          },
          "dependencies": [
            "aws_instance.Utchay3",
            "aws_lb_target_group.Utchay-target-group",
            "aws_security_group.Utchay-security-grp-rule",
            "aws_subnet.Utchay-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Utchay-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:853557926819:network-acl/acl-052b15339cd91e8b2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-052b15339cd91e8b2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "853557926819",
            "subnet_ids": [
              "subnet-0acb744ed285a9b15",
              "subnet-0c6cd36cefc9345f5"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-006501caf4638b000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.Utchay-public-subnet1",
            "aws_subnet.Utchay-public-subnet2",
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Utchay-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:853557926819:route-table/rtb-0b993d2916d6f82de",
            "id": "rtb-0b993d2916d6f82de",
            "owner_id": "853557926819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c16a2d5ae2446fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Utchay-route-table-public"
            },
            "tags_all": {
              "Name": "Utchay-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-006501caf4638b000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Utchay-internet-gateway",
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Utchay-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a0a1c0429bb1424",
            "route_table_id": "rtb-0b993d2916d6f82de",
            "subnet_id": "subnet-0acb744ed285a9b15"
          },
          "dependencies": [
            "aws_internet_gateway.Utchay-internet-gateway",
            "aws_route_table.Utchay-route-table-public",
            "aws_subnet.Utchay-public-subnet1",
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Utchay-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0198950c2d886ac9d",
            "route_table_id": "rtb-0b993d2916d6f82de",
            "subnet_id": "subnet-0c6cd36cefc9345f5"
          },
          "dependencies": [
            "aws_internet_gateway.Utchay-internet-gateway",
            "aws_route_table.Utchay-route-table-public",
            "aws_subnet.Utchay-public-subnet2",
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Utchay-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:853557926819:security-group/sg-069b94864f086b06d",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-069b94864f086b06d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Utchay-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "853557926819",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-006501caf4638b000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Utchay-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:853557926819:security-group/sg-020bcd677e14045ba",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020bcd677e14045ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069b94864f086b06d"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069b94864f086b06d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "853557926819",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Utchay-security-grp-rule"
            },
            "tags_all": {
              "Name": "Utchay-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-006501caf4638b000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Utchay-load_balancer_sg",
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Utchay-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:853557926819:subnet/subnet-0acb744ed285a9b15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acb744ed285a9b15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853557926819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Utchay-public-subnet1"
            },
            "tags_all": {
              "Name": "Utchay-public-subnet1"
            },
            "vpc_id": "vpc-006501caf4638b000"
          },
          "dependencies": [
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Utchay-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:853557926819:subnet/subnet-0c6cd36cefc9345f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6cd36cefc9345f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853557926819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Utchay-public-subnet2"
            },
            "tags_all": {
              "Name": "Utchay-public-subnet2"
            },
            "vpc_id": "vpc-006501caf4638b000"
          },
          "dependencies": [
            "aws_vpc.Utchay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Utchay_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:853557926819:vpc/vpc-006501caf4638b000",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0199aff1111b1c423",
            "default_route_table_id": "rtb-0440c50836139f350",
            "default_security_group_id": "sg-05fc58394a185ef55",
            "dhcp_options_id": "dopt-0d12ace0e0203d431",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006501caf4638b000",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0440c50836139f350",
            "owner_id": "853557926819",
            "tags": {
              "Name": "Utchay_vpc"
            },
            "tags_all": {
              "Name": "Utchay_vpc"
            }
          }
        }
      ]
    }
  ]
}